# cf-pages-batch-deploy

./: .env  .gitignore  README.md  config.yaml  config.yaml.example  deploy.ps1  pyproject.toml
.omo/drafts/: refactor-deploy.md
.omo/plans/: ps1-to-python.md  refactor-deploy.md
.omo/run-continuation/: ses_11690bcd3ffetTOf7NzPyJYWDg.json  ses_11f76ee74ffehtLL4HpeFgVIlC.json
.wrangler/cache/: pages.json
cf_pages_batch_scripts/: __init__.py  __main__.py  api.py  config.py  models.py  ui.py  workflows.py
cf_wrangler/: api.py  config.py  workflows.py
tests/: test_api.py  test_config.py  test_models.py  test_workflows.py
