[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cf-wrangler"
version = "0.1.0"
description = "Multi-account Cloudflare Pages manager — deploy and delete workflows"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
cf-wrangler = "cf_wrangler.__main__:main"
